# wasi-http-fs-poc

./: .gitignore  Cargo.toml  README.md
devshell/: flake.nix
host/: Cargo.toml
host/src/: main.rs
plugin1/: Cargo.toml
plugin1/src/: bindings.rs  lib.rs
plugin1/wit/: world.wit
